# python-dsi

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
dsi/: __init__.py  cli.py  debug.py  helpers.py  pytest.py
tests/: test_args_parsing.py  test_args_parsing_async.py  test_dummy.py
