[metadata]
name = dsi-utils
version = 0.1
url = http://dsimidzija.github.io/
project_urls =
    Documentation = https://github.com/dsimidzija/python-dsi-utils/blob/master/README.rst
    Code = https://github.com/dsimidzija/python-dsi-utils
    Issue tracker = https://github.com/dsimidzija/python-dsi-utils/issues
license = GPLv3
author = Dusko Simidzija
maintainer = Dusko Simidzija
description = A simple set of personal utils, helpers, and scripts for python dev and other purposes.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.entry_points]
console_scripts =
    dsi = dsi.cli:main
pytest11 =
    dsi-utils = dsi.pytest
